--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -9,6 +9,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/app_version"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/sdk_version"/>
 
     <TextView
