--- a/android/app/src/main/res/layout/create_wallet.xml
+++ b/android/app/src/main/res/layout/create_wallet.xml
@@ -22,134 +22,69 @@
             android:textSize="30dp"
             android:text="Seed Phrase" />
 
-
-        <FrameLayout
+        <ScrollView
+            android:id="@+id/seed_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            >
-            <ScrollView
-                android:id="@+id/seed_layout"
+            android:fillViewport="true">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fillViewport="true">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="16dp"
+                android:layout_margin="8dp"
+                android:gravity="center"
+                android:baselineAligned="false"
+                android:weightSum="2">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:id="@+id/left_layout"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="8dp">
-
-                    <LinearLayout
-                        android:id="@+id/left_layout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:layout_marginEnd="5dp" >
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/right_layout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:layout_marginStart="5dp" />
-                </LinearLayout>
-            </ScrollView>
-
-            <ScrollView
-                android:id="@+id/confirm_seed_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="invisible"
-                android:layout_weight="1"
-                android:fillViewport="true">
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="8dp" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:id="@+id/right_layout"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+        </ScrollView>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="8dp">
-
-                        <LinearLayout
-                            android:id="@+id/confirm_left_layout"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical"
-                            android:layout_marginEnd="5dp" />
-
-                        <LinearLayout
-                            android:id="@+id/confirm_right_layout"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical"
-                            android:layout_marginStart="5dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="8dp">
-
-                        <LinearLayout
-                            android:id="@+id/confirm_words_left_layout"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical"
-                            android:layout_marginEnd="5dp" />
-
-                        <LinearLayout
-                            android:id="@+id/confirm_words_right_layout"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical"
-                            android:layout_marginStart="5dp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-            </ScrollView>
-
-        </FrameLayout>
         <!-- Buttons -->
-
         <Button
-            android:id="@+id/copy_wallet"
+            android:id="@+id/copy_btn"
             android:layout_width="150dp"
-            android:background="#00000000"
             android:layout_height="30dp"
+            android:background="#00000000"
             android:textFontWeight="700"
-            android:text="Copy to clipboard"/>
+            android:text="Paste from clipboard"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:padding="5dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
+
             <Button
                 android:id="@+id/regenerate"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:text="Regenerate"
+                android:text="Clear"
                 android:layout_weight="1" />
 
             <Button
                 android:id="@+id/create_wallet_btn"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:text="Next"
+                android:text="Confirm"
                 android:layout_weight="1" />
         </LinearLayout>
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
